# microsoft-ai-app

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  export_handler.py  llm_analyzer.py  medical_history_viz.py  medical_knowledge.py  pdf_processor.py  pyproject.toml  rag_chatbot.py  replit.nix  requirements.txt  whatsapp_handler.py
.github/workflows/: azure-deploy.yml
attached_assets/: Pasted-import-os-import-pypdf-from-sentence-transformers-import-SentenceTransformer-import-faiss-import-1742288464891.txt  chunks.json
